--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@ footer {
     <div class="bottom-division">
             <div class="bottom-left-division">
                 <section class="contact-information">
-                    <h3>Contact Information</h3>
+                    <h3>Information:</h3>
                     <p>Phone: +91 8116680200 <br>Email: ankuraich075@gmail.com</p>
                     <p>D.O.B.: 13-08-1994</p>
                 </section>
 
                 <section class="technical-skills">
-                    <h3>Technical Skills</h3>
+                    <h3>Technical Skills:</h3>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
@@ -86,7 +86,7 @@ footer {
                 </section>
 
                 <section class="personal-skills">
-                    <h3>Personal Skills</h3>
+                    <h3>Personal Skills:</h3>
                     <ol>
                         <li>Communication</li>
                         <li>Team Work</li>
@@ -95,7 +95,7 @@ footer {
                 </section>
 
                 <section class="certification">
-                    <h3>Certification</h3>
+                    <h3>Certification:</h3>
                     <ul>
                         <li>Full Stack Web Development from <a href="https://vidyastu.in/" target="_blank">Vidyastu</a></li>
                         <li>Full Stack Development from Udemy</li>
@@ -103,7 +103,7 @@ footer {
                 </section>
                     
                 <section class="language">
-                    <h3>Language Proficiency</h3>
+                    <h3>Language Proficiency:</h3>
                     <ol>
                         <li>English</li>
                         <li>Bengali</li>
@@ -111,7 +111,7 @@ footer {
                     </ol>
                 </section>
 
-                <section class="hobbies">
+                <section class="hobbies:">
                     <h3>Hobbies</h3>
                     <ul>
                         <li>Explore new technology</li>
@@ -123,11 +123,10 @@ footer {
 
             <div class="bottom-right-division">
                 <section>
-                    <h2>Education</h2>
+                    <h2>Education:</h2>
                     <section>
                         <h3>The complete Website Development Bootcamp</h3>
-                        <p>From Vidyastu and Udemy</p>
-                        <p>(Persuing)</p>
+                        <p>From Vidyastu and Udemy (Persuing)</p>
                         <p>Completed HTML and CSS</p>
                     </section>
 
@@ -147,7 +146,7 @@ footer {
                         <p>Board: CISCE</p>
                     </section>
 
-                    <h2>Professional Experience</h2>
+                    <h2>Professional Experience:</h2>
                     <section>
                         <h3>North Point English Academy, Malda.</h3>
                         <p>Working as an Assistant Teacher</p>
