--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ footer {
                     <h3>Certification:</h3>
                     <ul>
                         <li>Full Stack Web Development from <a href="https://vidyastu.in/" target="_blank">Vidyastu</a></li>
-                        <li>Full Stack Development from Udemy</li>
+                        <li>Full Stack Web Development from Udemy</li>
                     </ul>
                 </section>
                     
@@ -125,7 +125,7 @@ footer {
                 <section>
                     <h2>Education:</h2>
                     <section>
-                        <h3>The complete Website Development Bootcamp</h3>
+                        <h3>Full Stack Web Development.</h3>
                         <p>From Vidyastu and Udemy (Persuing)</p>
                         <p>Completed HTML and CSS</p>
                     </section>
@@ -136,12 +136,12 @@ footer {
                     </section>
 
                     <section>
-                        <h3>Malda Polytechnic, Malda</h3>
+                        <h3>Malda Polytechnic, Malda.</h3>
                         <p>Diploma in Automobile Engineering 2012</p>
                     </section>
 
                     <section>
-                        <h3>The St. Xavier's School, Malda</h3>
+                        <h3>The St. Xavier's School, Malda.</h3>
                         <p>STD 10 (ICSE) 2009</p>
                         <p>Board: CISCE</p>
                     </section>
