--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ footer {
                     <section>
                         <h3>Mahindra First Choice, Behala.</h3>
                         <p>Worked as an Assistant Manager</p>
-                        <p>1st August 2015 to 31st March</p>
+                        <p>1st August 2015 to 31st March 2017</p>
                     </section>
                 </section>
                 
