--- a/index.html
+++ b/index.html
@@ -125,24 +125,26 @@ footer {
                 <section>
                     <h2>Education:</h2>
                     <section>
-                        <h3>Full Stack Web Development.</h3>
-                        <p>From Vidyastu and Udemy (Persuing)</p>
+                        <h3>Full Stack Web Development(Persuing).</h3>
+                        <p>From Vidyastu and Udemy</p>
                         <p>Completed HTML and CSS</p>
                     </section>
 
                     <section>
-                        <h3>MCKVIE, Liluah.</h3>
-                        <p>B.Tech. in Automobile Engineering 2015</p>
+                        <h3>B.Tech. in Automobile Engineering 2015</h3>
+                        <p>MCKVIE, Liluah.</p>
+                        <p>Board: M.A.K.A.U.T.</p>
                     </section>
 
                     <section>
-                        <h3>Malda Polytechnic, Malda.</h3>
-                        <p>Diploma in Automobile Engineering 2012</p>
+                        <h3>Diploma in Automobile Engineering 2012</h3>
+                        <p>Malda Polytechnic, Malda.</p>
+                        <p>Board: W.B.S.C.T.E.</p>
                     </section>
 
                     <section>
-                        <h3>The St. Xavier's School, Malda.</h3>
-                        <p>STD 10 (ICSE) 2009</p>
+                        <h3>STD 10 (ICSE) 2009</h3>
+                        <p>The St. Xavier's School, Malda.</p>
                         <p>Board: CISCE</p>
                     </section>
 
