--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ footer {
                     <section>
                         <h3>STD 10 (ICSE) 2009</h3>
                         <p>The St. Xavier's School, Malda.</p>
-                        <p>Board: CISCE</p>
+                        <p>Board: C.I.S.C.E.</p>
                     </section>
 
                     <h2>Professional Experience:</h2>
