--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ footer {
                     </section>
 
                     <section>
-                        <h3>STD 10 (ICSE) 2009</h3>
+                        <h3>STD 10 (ICSE) 2009.</h3>
                         <p>The St. Xavier's School, Malda.</p>
                         <p>Board: C.I.S.C.E.</p>
                     </section>
