--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@ footer {
                     </section>
 
                     <section>
-                        <h3>B.Tech. in Automobile Engineering 2015</h3>
+                        <h3>B.Tech. in Automobile Engineering 2015.</h3>
                         <p>MCKVIE, Liluah.</p>
                         <p>Board: M.A.K.A.U.T.</p>
                     </section>
 
                     <section>
-                        <h3>Diploma in Automobile Engineering 2012</h3>
+                        <h3>Diploma in Automobile Engineering 2012.</h3>
                         <p>Malda Polytechnic, Malda.</p>
                         <p>Board: W.B.S.C.T.E.</p>
                     </section>
